<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/searchFragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/search"
        android:icon="@drawable/search"/>
    <item
        android:id="@+id/plusFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/add_item"
        android:icon="@drawable/plus"/>
    <item
        android:id="@+id/favoriteFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/favorite"
        android:icon="@drawable/favorite"/>
    <item
        android:id="@+id/profileFragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:icon="@drawable/profile"/>
</menu>